--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+/* src/App.css */
 
+/* Se eliminó el max-width y centrado forzado para dejar que MUI maneje el layout */
 .logo {
   height: 6em;
   padding: 1.5em;
